# cli-agent

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  HOOKS_DIRECTORY_FEATURE_SUMMARY.md  HOOKS_IMPLEMENTATION_SUMMARY.md  README.md  README_SESSION_MANAGEMENT.md  README_STREAMING_JSON.md  README_TOOL_PERMISSIONS.md  agent.py  analysis_session_issue.py  analyze_description.py  async_cli.py  config.py  demo_input.py  example_config.json  input.json  install.sh  interactive_prompt.py  interrupt_redundancy_report.md  mcp_deepseek_host.py  mcp_gemini_host.py  mcp_server.py  output.json  pyproject.toml  pytest.ini  requirements.txt  result.txt  run_tests.py  sample_conversation.jsonl  session_manager.py  session_saving_issue_report.md  setup.py  simple_deepseek_host.py  simple_input.json  simple_prompt.py  simple_test.py  simplified_test.txt  streaming_json.py  (+9 more)
.agent_sessions/: 13470463-bc55-45da-abbd-32224c18f181.json  24934fbd-f30d-40b3-bd59-a3b4fc2ebf25.json  25f983a1-599e-4b06-881d-6b4fb8cf998d.json  2a5f6980-4cc5-4c71-ae8b-40b78f6c12dd.json  2f47d635-73e0-4eb1-be33-80efdbd36c31.json  409682f4-f7f8-4e38-b847-2c9a8b67e281.json  40edcaa8-3483-4962-8810-77769fadea8e.json  4595fd04-9cd6-4c97-bd07-95756b72f9fc.json  5772e469-9569-4312-b345-63435b40245d.json  686862f2-6eff-40f1-baaa-d0a3993f3dc9.json  6dfc7fe2-9e39-4919-91a7-038e84012013.json  9617f5e1-f568-40f1-b40c-488ff7e1ca62.json  9e3124a2-8371-4d1e-b8f1-36117aa5073b.json  ac05a196-a97d-4ea7-a6d9-d6a712b1a00d.json  b1037e22-c433-4179-8564-a03a35941626.json  b1850a1c-f72b-43d2-98ec-548561486f42.json  c41b1042-303d-4c09-85d1-3be795e0dfae.json  cdabb373-fbbe-4c7d-bd1a-b3908f28e8f9.json  daaa062d-4e6d-4ba7-a001-274625987444.json  ee1679f5-cef9-4c02-9ecf-64a1def08804.json  last_session.json
.claude/commands/: debug.md  test.md
.config/agent/: example_settings.json
.github/workflows/: test.yml
cli_agent/: __init__.py
cli_agent/cli/: __init__.py
cli_agent/core/: __init__.py  base_agent.py  base_llm_provider.py  base_provider.py  builtin_tool_executor.py  chat_interface.py  display_manager.py  enhanced_streaming_json.py  event_system.py  formatting.py  formatting_utils.py  global_interrupt.py  input_handler.py  interrupt_aware_streaming.py  mcp_host.py  model_config.py  response_handler.py  slash_commands.py  subagent_coordinator.py  system_prompt_builder.py  terminal_manager.py  token_manager.py  tool_call_processor.py  tool_execution_engine.py  tool_permissions.py  tool_schema.py  unified_tool_format.py
cli_agent/mcp/: model_server.py
cli_agent/providers/: __init__.py  anthropic_provider.py  deepseek_provider.py  google_provider.py  moonshot_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  xai_provider.py
cli_agent/subagents/: __init__.py  subagent.py  subagent_runner.py
cli_agent/tools/: __init__.py  builtin_tools.py
cli_agent/utils/: __init__.py  content_processing.py  http_client.py  retry.py  token_counting.py  tool_conversion.py  tool_name_utils.py  tool_parsing.py
docs/: hooks.md  model_listing_example.md  system_prompt_override.md
docs/hooks/: hooks_directory_guide.md  hooks_usage_example.md
sessions/: .tool_permissions_64544988-0755-4856-93da-89f65726b5c4.json  .tool_permissions_9953a840-f19b-4d78-b387-1170d592e8aa.json  .tool_permissions_bb80fa07-1fb8-4e4f-a4e7-bcfd44d76462.json  .tool_permissions_dd1a652e-b8cb-4e5f-a226-bc1a383a00f7.json  .tool_permissions_e3d28648-5d36-4735-ab02-309a8c48e038.json  .tool_permissions_ea7ba6f5-fee7-4d0f-af37-3f0a311258f8.json
tests/: __init__.py  conftest.py
tests/integration/: test_agent_workflows.py
tests/unit/: test_base_agent.py  (+9 more)
(+9 files in other folders)
